# quantum-factor-2025-code

./: .gitignore  README.md  inkscape.sh  pyproject.toml  requirements.txt  step1_collect  step2_plot
assets/: masked_success_stats.csv
assets/man/: adder-mock-up.skp  lookup-mock-up.skp  phase-gradient-mock-up.skp  phaseup-mock-up.skp  tbl-gradient-decomposition-accurate.tex  tbl-gradient-decomposition.tex  tbl-notation.tex
parameterizations/: README.md  create-csv-files.py  ff-dh-schnorr-large-s-params.csv  ff-dh-schnorr-params.csv  ff-dh-schnorr-single-run-params.csv  ff-dh-short-large-s-params.csv  ff-dh-short-params.csv  ff-dh-short-single-run-params.csv  rsa-large-s-params.csv  rsa-params.csv  rsa-single-run-params.csv
parameterizations/logs/: README.md
parameterizations/logs/ff-dh-schnorr/: estimate-runs-diagonal.txt
src/facto/algorithm/: __init__.py  (+2 more)
src/facto/t_decomp/: CMakeLists.txt  decomp_util.py  decomp_util_test.py  exact_fidelity.py  ket.cc  ket.h  ket.test.cc  main.cc  main_generate_phase_gradient_init_latex_table  mat2.cc  mat2.h  mat2.test.cc  state.cc  state.h  state.test.cc  val.cc  val.h  val.test.cc  val_r2.cc  val_r2.h  val_r2.test.cc
src/scatter_script/: README.md  __init__.py  _cost_key.py  _lookup.py  _qpu.py  _qpu_test.py  _quint.py  _quint_test.py  _rvalue_multi_int.py  _util.py  _util_test.py
testdata/: example128.ini  example32.ini  example64.ini  rsa100.ini  rsa2048.ini  rsa896.ini
tools/: compute_phase_gradient_gate_sequence_infidelity  convert_svg_assets_to_png.sh  factor_precompute  factor_simulate_approx_modexp
(+42 files in other folders)
